@@ -52,8 +52,8 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Use %zu when printing a sizeof to squelch compiler warnings
       Remove unused missing/strdup.c.
       (FIXME: somebody please wrap the line below just before the release)
-      AODV, AppleTalk, BOOTP, CHDLC, DCCP, EAP, EGP, EIGRP, ForCES, Geneve, GRE, ICMP, Juniper, L2TP, LISP, mobile, MSDP, NetFlow, NFLOG, NTP, OLSR, pflog, PGM, RADIUS, RIP, RSVP, SCTP, SNMP, TCP, UDP, vsock: Modernize packet parsing style
-      DCCP, EGP: Replace custom code with tok2str()
+      AODV, AppleTalk, BOOTP, CHDLC, DCCP, EAP, EIGRP, ForCES, Geneve, GRE, ICMP, Juniper, L2TP, LISP, mobile, MSDP, NetFlow, NFLOG, NTP, OLSR, pflog, PGM, RADIUS, RIP, RSVP, SCTP, SNMP, TCP, UDP, vsock: Modernize packet parsing style
+      DCCP: Replace custom code with tok2str().
       UDP: Clean up address and port printing.
       AppleTalk: Declutter appletalk.h.
       IEEE 802.11: Simplify handle_action().
@@ -108,6 +108,8 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       IPv6 mobility: Modernize packet parsing and make fixes.
       IP6OPTS: Modernize packet parsing and make fixes.
       VXLAN: Add UDP port 8472 used by Linux as the default port.
+      EGP: Replace custom code with tok2str(); Modernize packet parsing and
+        fix printing with -v option.
     User interface:
       Add optional unit suffix on -C file size.
       Improve the handling of size suffixes for -C.
